Modify tsconfig.json due to the new folder structure, create compile script for npm

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,12 @@
 {
+  "include": [
+    "src/*"
+  ],
   "compilerOptions": {
     "target": "esnext",
     "module": "commonjs",
     "sourceMap": true,
-    "watch": true
+    "watch": true,
+    "outDir": "./build"
   }
 }
