--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "substitution",
   "version": "1.0.0",
   "description": "Text encrypting program written in TypeScript",
-  "main": "substitution.js",
+  "main": "./build/substitution.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "compile": "tsc"
   },
   "repository": {
     "type": "git",
