--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Text encrypting program written in TypeScript",
   "main": "./build/substitution.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "testWatch": "jest --watchAll",
     "compile": "tsc"
   },
   "repository": {
@@ -20,5 +21,11 @@
   "homepage": "https://github.com/gergokutu/substitution-TS#readme",
   "dependencies": {
     "@types/node": "^13.11.0"
+  },
+  "devDependencies": {
+    "@types/jest": "^25.1.5",
+    "jest": "^25.2.7",
+    "ts-jest": "^25.3.0",
+    "typescript": "^3.8.3"
   }
 }
